# certbot-dns-nicru

./: .gitignore  README.md  changelog.md  pyproject.toml  requirements.ru  setup.cfg
.github/workflows/: python-publish.yml  python-tests.yml
certbot_dns_nicru/: dns_nicru.py
tests/: test_dns_nicru.py
