[metadata]
name = certbot_dns_nicru
version = 1.0.0
author = Alexey Matveev
description = This plugin for certbot, configures a DNS TXT record to respond to a dns-01 challenge using the nic.ru Remote REST API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shizacat/certbot-dns-nicru

[options]
python_requires = >=3.8
packages = find:
install_requires =
    acme>=0.29.0
    certbot>=0.34.0
    setuptools
    requests
    nic-api @ git+https://github.com/shizacat/nic-api@1.0.3

[options.packages.find]
exclude=
    tests
