[metadata]
name = certbot_dns_nicru
version = 1.0.0
author = Alexey Matveev
description = This plugin for certbot, configures a DNS TXT record to respond to a dns-01 challenge using the nic.ru Remote REST API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shizacat/certbot-dns-nicru
classifier =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Security
    Topic :: System :: Installation/Setup
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
python_requires = >=3.8
packages = find:
install_requires =
    acme>=0.29.0
    certbot>=0.34.0
    setuptools
    requests
    sh-nic-api>=1.0.3

[options.packages.find]
exclude=
    tests

[options.entry_points]
certbot.plugins =
    dns-nicru = certbot_dns_nicru.dns_nicru:Authenticator
